k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
      - name: auth-service

        image: yourdockerhub/auth-service:latest

        ports:
        - containerPort: 5000
