k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: saas-ingress

spec:

  rules:
  - host: yourdomain.com

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: gateway
            port:
              number: 8000
